changes in project type
